// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/WarnMetricAckModal error display 1`] = `
<Modal
  animation={true}
  aria-labelledby="warnMetricAckHeaderModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={false}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="warnMetricAckHeaderModalLabel"
    >
      <FormattedMessage
        defaultMessage="Upgrade to Mattermost Enterprise Edition"
        id="warn_metric_ack_modal.header.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div>
      <FormattedMessage
        defaultMessage="Mattermost strongly recommends that deployments of over {limit} users upgrade to Mattermost Enterprise E20, which offers features such as user management, server clustering, and performance monitoring"
        id="warn_metric_ack_modal.number_of_active_users.description"
        values={
          Object {
            "limit": 500,
          }
        }
      />
      <br />
      <div
        className="form-group has-error"
      >
        <br />
        <label
          className="control-label"
        >
          <FormattedMessage
            defaultMessage="The license could not be retrieved. Please try again or visit https://mattermost.com/trial/ to request a license."
            id="warn_metric_ack_modal.error.body"
            values={Object {}}
          />
        </label>
      </div>
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-primary"
      data-testid="featureDiscovery_primaryCallToAction"
      onClick={[Function]}
    >
      <LoadingWrapper
        loading={false}
        text="Getting trial"
      >
        <FormattedMessage
          defaultMessage="Start trial"
          id="warn_metric_ack_modal.start_trial"
          values={Object {}}
        />
      </LoadingWrapper>
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/WarnMetricAckModal should match snapshot, init 1`] = `
<Modal
  animation={true}
  aria-labelledby="warnMetricAckHeaderModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={false}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="warnMetricAckHeaderModalLabel"
    >
      <FormattedMessage
        defaultMessage="Upgrade to Mattermost Enterprise Edition"
        id="warn_metric_ack_modal.header.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div>
      <FormattedMessage
        defaultMessage="Mattermost strongly recommends that deployments of over {limit} users upgrade to Mattermost Enterprise E20, which offers features such as user management, server clustering, and performance monitoring"
        id="warn_metric_ack_modal.number_of_active_users.description"
        values={
          Object {
            "limit": 500,
          }
        }
      />
      <br />
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-primary"
      data-testid="featureDiscovery_primaryCallToAction"
      onClick={[Function]}
    >
      <LoadingWrapper
        loading={false}
        text="Getting trial"
      >
        <FormattedMessage
          defaultMessage="Start trial"
          id="warn_metric_ack_modal.start_trial"
          values={Object {}}
        />
      </LoadingWrapper>
    </button>
  </ModalFooter>
</Modal>
`;
